<resources>
    <!-- String values for general application-wide text -->
    <string name="app_name">Treem</string>
    <string name="edit">Edit</string>
    <string name="error">Error</string>
    <string name="error_general_message">An error occurred while performing the action.</string>
    <string name="next">Next</string>
    <string name="treem">Treem</string>
    <string name="select">Select</string>
    <string name="save">Save</string>
    <string name="failed_parse_server_answer">Failed to parse server answer</string>
    <string name="change">Change</string>
    <string name="feed">Feed</string>
    <string name="pics_vids">Pics/Vids</string>
    <string name="image_albums">Albums</string>
    <string name="image_camera">Camera</string>
    <string name="title_write_describe_permissions">App needs write permission</string>
    <string name="msg_write_describe_permissions">App needs write permission to save image</string>
    <string name="error_cant_capture_image_without_permission">Can\'t capture the image without write permission</string>
    <string name="error_failed_create_file">Failed to create an image file</string>
    <string name="media_type_not_supported">Media of \"%s\" type not supported</string>
    <string name="rewards_info">%1$d%%, %2$d points</string>
    <string name="close">Close</string>
    <string name="title_session_expired">Session expired</string>
    <string name="msg_session_expired">Your session has expired. Please log back in.</string>
    <string name="test">Test</string>
    <string name="toolbar_title_alerts">Alerts</string>
    <string name="try_to_reload_data">Try to reload data</string>
    <string name="explore">Explore</string>
    <string name="chat">Chat</string>
    <string name="members">Members</string>
    <string name="post">Post</string>
    <string name="treem_response_code_network_error">Network error. Try again.</string>
    <string name="treem_response_request_canceled">Request canceled</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="unread">Unread</string>
    <string name="alert_failed_load_data">Failed to load alerts: %s</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="remove">Remove</string>
    <string name="all">All</string>
    <string name="add_new">Add new</string>
    <string name="toolbar_title_media"><![CDATA[Pictures & Videos]]></string>
    <string name="media_failed_load">Failed to load media: %s</string>
    <string name="failed_load_media">Failed to load image</string>
    <string name="title_delete_image">Delete image</string>
    <string name="msg_delete_image">Do you want to delete this image?</string>
    <string name="delete">Delete</string>
    <string name="media_error_invalid_argument_passed">Invalid argument passed</string>
    <string name="media_error_wrong_id">Specific content id passed doesn’t belong to the user or is invalid</string>
    <string name="no_media_files">You have no media files</string>
    <string name="user_no_media_files">User has no media files</string>
    <string name="status_p">Status:</string>
    <string name="city_p">City:</string>
    <string name="state_p">State:</string>
    <string name="country_p">Country:</string>
    <string name="status_friends">Friends</string>
    <string name="status_action_unfriend">Unfriend</string>
    <string name="status_pending">Pending Friends</string>
    <string name="status_action_cancel">Cancel</string>
    <string name="status_not_friends">Not Friends</string>
    <string name="status_action_add_friend">Add Friend</string>
    <!--"Tree", "Equity", "Alerts", "Settings"-->
    <string name="tab_tree">Tree</string>
    <string name="tab_rewards">Rewards</string>
    <string name="tab_alerts">Alerts</string>
    <string name="tab_profile">Profile</string>
    <string name="cancel">Cancel</string>
    <string name="enter_branch_name">Enter branch name</string>
    <string name="loading">Loading</string>
    <string name="branch_id">Branch ID</string>
    <string name="parent_branch_id">Parent branch ID</string>
    <string name="position">Position</string>
    <string name="error_seeding_invalid_parameters_passed">Invalid parameters passed</string>
    <string name="error_seeding_invalid_branch_id">Invalid tree id / branch id combination (branch id pass doesn’t belong to tree)</string>
    <string name="error_seeding_user_dont_exists">Users doesn’t exists</string>
    <string name="error_seeding_invitation_code_generation_failed">Invitation code unable to be generated</string>
    <string name="error_try_seed_self">Trying to seed self</string>
    <string name="add">Add</string>
    <string name="seeding_failed_set_user">Failed to add user: %s</string>
    <string name="profile_error_invalid_username">Enter valid username</string>
    <string name="move">Move</string>
    <string name="share">Share</string>
    <string name="feeds_no_items_description">Add members to view their posts here</string>
    <string name="failed_load_feeds">Failed to load feeds: %s</string>
    <string name="comment">Comment</string>
    <string name="react">React</string>
    <string name="post_share_name">%2$s shared %1$s\'s post</string>
    <string name="you_are_tagged">You are tagged</string>
    <string name="failed_show_link">Failed to open link</string>
    <string name="retry">Retry</string>
    <string name="move_here">Move here</string>
    <string name="move_branch">Move Branch</string>
    <string name="delete_branch_confirmation_title">Delete Branch?</string>
    <string name="delete_branch_confirmation_message">Deleting will also remove any nested branches members tied to those branches. Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="back">Back</string>
    <string name="option_who_can_see_this_post">Who can see this post</string>
    <string name="option_reactions">Reactions</string>
    <string name="option_edit_this_post">Edit this post</string>
    <string name="option_delete_this_post">Delete this post</string>
    <string name="option_report_this_post">Report this post</string>
    <string name="secret_tree">Secret Tree</string>
    <string name="pin">Pin</string>
    <string name="set_pin">Set PIN</string>
    <string name="pin_code_hint">A PIN is required for secret tree access. All activities made within the secret tree stay within the secret tree and are not viewable in the main default tree.</string>
    <string name="new_pin">New PIN</string>
    <string name="reenter_new_pin">Reenter New PIN</string>
    <string name="set_pin_code_hint">Set a PIN to access your secret tree. If the current PIN, which may or may not exist, is not provided, all existing secret tree settings will be removed on the new PIN set.</string>
    <string name="current_pin_optional">Current PIN (optional)</string>
    <string name="enter">Enter</string>
    <string name="set">Set</string>
    <string name="error_pin_formar">PIN must be numerical and 4-8 digits long.</string>
    <string name="error_pin_locked_message">PIN has been entered incorrectly too many times. Please wait 20 minutes before trying again.</string>
    <string name="error_pin_locked_title">Locked Out</string>
    <string name="pin_incorrect_title">Incorrect PIN</string>
    <string name="pin_incorrect_message">PIN has not been set up or is incorrect.</string>
    <string name="ok">Ok</string>
    <string name="set_pin_title">Set PIN?</string>
    <string name="set_pin_message">If a new PIN is set without a correct current PIN, any existing secret tree data will be removed. Are you sure you want to set your PIN?</string>
    <string name="exit">Exit</string>
</resources>
