<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.tree.TreeViewActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/branchId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/branch_id"
            android:digits="0123456789"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/position"
            android:digits="0123456789"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/parent_branch_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/parent_branch_id"
            android:digits="0123456789"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/buttonSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        style="@style/ButtonTheme"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
