<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:id="@+id/tree_screen_container"
				xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:app="http://schemas.android.com/apk/res-auto"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@color/light_gray"
				android:fitsSystemWindows="true">

	<ImageView
		android:id="@+id/background_image"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:contentDescription="@null"
		android:scaleType="centerCrop"
		android:src="@drawable/home_background"/>

	<View
		android:id="@+id/navigation_overlay"
		android:layout_width="match_parent"
		android:layout_height="match_parent"/>

	<LinearLayout
		android:id="@+id/tree_container"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:orientation="vertical"
		android:visibility="gone"
		tools:visibility="visible">

		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="10dp"
			android:paddingRight="10dp">

			<Button
				android:id="@+id/explore"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:drawablePadding="7dp"
				android:drawableTop="@drawable/ic_explore_white"
				android:text="@string/explore"
				android:textColor="@android:color/white"/>

			<Button
				android:id="@+id/exit"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:drawablePadding="7dp"
				android:drawableTop="@drawable/exit"
				android:text="@string/exit"
				android:textColor="@android:color/white"
				android:visibility="gone"
				tools:visibility="visible"/>

			<Button
				android:id="@+id/chat"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical|end"
				android:drawablePadding="7dp"
				android:drawableTop="@drawable/ic_chat_white"
				android:text="@string/chat"
				android:textColor="@android:color/white"/>

		</FrameLayout>

		<com.treem.treem.widget.HexagonGridLayout
			android:id="@+id/hexagon_grid"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
			android:layout_marginTop="10dp"
			app:gridHeight="3"
			app:gridWidth="3"
			app:offset="2dp"
			app:radius="60dp"/>

		<FrameLayout
			android:id="@+id/secret_tree_handler"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="10dp"
			android:paddingRight="10dp">

			<Button
				android:id="@+id/members"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:drawablePadding="7dp"
				android:drawableTop="@drawable/ic_members_white"
				android:text="@string/members"
				android:textColor="@android:color/white"/>

			<Button
				android:id="@+id/back"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:drawablePadding="7dp"
				android:drawableTop="@drawable/reload"
				android:text="@string/back"
				android:textColor="@android:color/white"
				android:visibility="gone"/>

			<Button
				android:id="@+id/post"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical|end"
				android:drawablePadding="7dp"
				android:drawableTop="@drawable/ic_post_white"
				android:text="@string/post"
				android:textColor="@android:color/white"/>

		</FrameLayout>

	</LinearLayout>

	<ProgressBar
		android:id="@+id/progress_bar"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:theme="@style/DarkProgressBar"/>

	<TextView
		android:id="@+id/moving_hint"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@android:color/black"
		android:gravity="center"
		android:padding="10dp"
		android:text="Move this branch to an open slot"
		android:textColor="@android:color/white"
		android:visibility="gone"
		tools:visibility="visible"/>

</RelativeLayout>