<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:app="http://schemas.android.com/apk/res-auto"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@android:color/white"
				android:orientation="vertical">

	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="@dimen/actionBarSize"
		android:background="@color/colorPrimary"
		android:paddingEnd="5dp"
		android:paddingLeft="5dp"
		android:paddingRight="5dp"
		android:paddingStart="5dp"
		app:contentInsetLeft="0dp"
		app:contentInsetStart="0dp"
		app:elevation="2dp">

		<LinearLayout
			android:id="@+id/toolbar_views"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:gravity="center_vertical"
			android:orientation="horizontal">

			<ImageButton
				android:id="@+id/toolbar_home"
				android:layout_width="@dimen/actionbar_icon_size"
				android:layout_height="@dimen/actionbar_icon_size"
				android:background="?attr/selectableItemBackground"
				android:contentDescription="@null"
				android:padding="@dimen/actionbar_icon_padding"
				android:visibility="invisible"
				app:srcCompat="@drawable/ab_back_material"/>

			<TextView
				android:id="@+id/toolbar_title"
				style="@style/StyleToolbarTitle"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/secret_tree"/>

			<ImageButton
				android:id="@+id/toolbar_close"
				android:layout_width="@dimen/actionbar_icon_size"
				android:layout_height="@dimen/actionbar_icon_size"
				android:background="?attr/selectableItemBackground"
				android:contentDescription="@null"
				android:padding="@dimen/actionbar_icon_padding"
				app:srcCompat="@drawable/ic_action_cancel"/>

		</LinearLayout>

	</android.support.v7.widget.Toolbar>

	<TextView
		android:id="@+id/pin_code_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/toolbar"
		android:layout_marginLeft="10dp"
		android:layout_marginStart="10dp"
		android:layout_marginTop="10dp"
		android:text="@string/pin"
		android:textAllCaps="true"
		android:textColor="@android:color/black"/>

	<EditText
		android:id="@+id/pin_code_field"
		android:layout_width="125dp"
		android:layout_height="wrap_content"
		android:layout_below="@id/pin_code_label"
		android:layout_marginLeft="10dp"
		android:layout_marginStart="10dp"
		android:layout_marginTop="10dp"
		android:background="@drawable/field_background"
		android:inputType="numberPassword"
		android:lines="1"
		android:maxLength="8"
		android:maxLines="1"
		android:textColor="@android:color/black"/>

	<Button
		android:id="@+id/set_pin_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/pin_code_field"
		android:layout_marginLeft="10dp"
		android:layout_marginStart="10dp"
		android:layout_marginTop="25dp"
		android:onClick="onSetPinCodeButtonClick"
		android:text="@string/set_pin"
		android:textAllCaps="false"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/set_pin_button"
		android:layout_marginEnd="10dp"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginStart="10dp"
		android:layout_marginTop="20dp"
		android:text="@string/pin_code_hint"
		android:textColor="@android:color/black"
		android:textSize="12sp"/>

	<Button
		android:id="@+id/button_enter"
		style="@style/ButtonSubmitTheme"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:layout_alignParentBottom="true"
		android:layout_marginTop="15dp"
		android:enabled="false"
		android:onClick="onEnterButtonClick"
		android:text="@string/enter"
		android:textSize="18sp"/>

</RelativeLayout>